--- a/css/style.css
+++ b/css/style.css
@@ -331,8 +331,8 @@ body {
     color: white;
     display: flex;
     gap:0.5rem ;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
+    align-items: flex-end;
 	width: 100%;
 }
 .contact__content{
@@ -340,10 +340,11 @@ body {
     gap: 0.5rem;
     align-items: flex-end;
 }
-.contact__content > a{
+.contact__card > a{
     color: rgb(202, 202, 202);
     font-size: 20px;
     text-decoration: none;
+	height: 50%;
 }
 .contact__content > h3 {
     margin-bottom: 0;
@@ -354,7 +355,7 @@ body {
 .contact__form{
     background-color: #333;
     padding: 2rem 3rem;
-    margin-top: 3rem;
+    margin-top: 1rem;
     color: white;
     display: flex;
     flex-direction: column;
